# Genshinn_Auto_Login

./: README.md
GAS(Google Apps Script)/: login.gs
Python/: pyproject.toml
Python/src/: logger.py  main.py
