[tool.poetry]
name = "genshin-login"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "genshin_login"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pygments = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
